# py-Goldsberry

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  DebugBoxScore  LICENSE  MANIFEST.in  MainDevelop.txt  Makefile  README.md  README.rst  Test Push.txt  _apiFunc.py  _masterclass.py  apiparams.py  goldsberry.sublime-workspace  index.html  masterclass.py  params.json  project-overview.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_api_validation.py  tox.ini
.github/: pull_request_template.md
.github/workflows/: main.yml
data/: gameids.json
docs/: 0. Introduction.ipynb  0. Introduction.ipynb.orig  1. Player Game Logs.ipynb  2. Get Team Games for Specific Period.ipynb  Compute Hollinger PER.ipynb  Enriching Shooting Data.ipynb  GetMatchResults.ipynb  GetPlayerStatsPerGame.ipynb  Player Game Logs-Copy1.ipynb  Player Game Logs.ipynb  Untitled.ipynb  Visualizing NBA Shots with py-Goldsberry.ipynb  WorkFlow.md  dailyPER.py  databases.md  draftdata.md  requirements.txt  snippets.txt  tprendergast.ipynb
docs/.ipynb_checkpoints/: 0. Introduction-checkpoint.ipynb  2. Get Team Games for Specific Period-checkpoint.ipynb  Compute Hollinger PER-checkpoint.ipynb  Enriching Shooting Data-checkpoint.ipynb  Player Game Logs-Copy1-checkpoint.ipynb  Player Game Logs-Copy2-checkpoint.ipynb  Visualizing NBA Shots with py-Goldsberry-checkpoint.ipynb
docs/dev/: API_STATUS.md  ARCHITECTURE.md  CONTRIBUTING.md  DECISIONS.md  ENDPOINT_ROADMAP.md  IMPLEMENTATION_GUIDE.md  MIGRATION.md  PATTERNS.md  PROJECT_PLAN.md  TESTING.md
draft/: _Draft.py  _Draft2.py
examples/: basic_usage.py
game/: _Game2.py
goldsberry/: Game.py  League.py  Misc.py  __init__.py  _apiFunc.py  _apiparams.py  _masterclass.py  apiconvertor.py  apiparams.py  boxscore.py  draft.py  gamelog.py  leagueleaders.py  lineups.py  masterclass.py  miscellaneous.py  nbadata.py  playbyplay.py  player.py  playerlog.py  shotchart.py  sportvu.py  team.py
goldsberry/draft/: _Draft.py  _Draft2.py  __init__.py  draft.py
goldsberry/game/: Game.py  _Game.py  _Game2.py  __init__.py  game.py
goldsberry/league/: League.py  _Draft.py  _Draft2.py  _League.py  _League2.py  _PlayType.py  _PlayType2.py  _SportVu.py  __init__.py  league.py
goldsberry/player/: Player.py  _Player.py  _Player2.py  __init__.py  player.py
goldsberry/playtype/: _PlayType.py  _PlayType2.py  __init__.py  playtype.py
goldsberry/schemas/: request_params.py
goldsberry/sportvu/: _SportVu.py  _SportVu2.py  __init__.py  sportvu.py
goldsberry/team/: _Team.py  _Team2.py  __init__.py  team.py
goldsberry/utils/: enums.py  headers.py
goldsberry_legacy/: __init__.py  _apifunctions.py  apiconvertor.py  apiparams.py  masterclass.py
goldsberry_legacy/draft/: _Draft.py  __init__.py  draft.py
goldsberry_legacy/game/: _Game.py  __init__.py  game.py
goldsberry_legacy/league/: _League.py  __init__.py  league.py
goldsberry_legacy/player/: _Player2.py  __init__.py  player.py
goldsberry_legacy/playtype/: _PlayType.py  __init__.py
goldsberry_legacy/sportvu/: _SportVu.py  __init__.py  sportvu.py
goldsberry_legacy/team/: _Team.py  __init__.py
league/: _League.py  _League2.py
notes/: old-notes.md
player/: _Player.py  _Player2.py  __init__.py
playtype/: _PlayType.py  _PlayType2.py
sportvu/: _SportVu2.py
src/goldsberry/: __init__.py
src/goldsberry/client/: exceptions.py
src/goldsberry/endpoints/: __init__.py
src/goldsberry/endpoints/game/: __init__.py  boxscore_advanced.py  boxscore_traditional.py
src/goldsberry/endpoints/league/: __init__.py  player_stats.py  team_stats.py
src/goldsberry/endpoints/player/: __init__.py  career_stats.py  game_logs.py  player_list.py
src/goldsberry/endpoints/team/: __init__.py  game_logs.py  roster.py  season_stats.py
src/goldsberry/enums/: common.py
src/goldsberry/models/game/: __init__.py  boxscore_advanced.py  boxscore_traditional.py
src/goldsberry/models/league/: __init__.py  player_stats.py  team_stats.py
src/goldsberry/models/player/: __init__.py  career_stats.py  game_logs.py  player_list.py
src/goldsberry/models/team/: __init__.py  game_logs.py  roster.py  season_stats.py
src/nba_api/: __init__.py
src/nba_api/client/: base.py
src/nba_api/endpoints/player/: player_list.py
src/nba_api/models/: base.py
team/: _Team.py  _Team2.py
tests/: conftest.py  test_apiFunc.py  test_apifunctions.py  test_goldsberry.py  tests_goldsberry.py
tests/fixtures/game/: boxscore_advanced_response.json  boxscore_traditional_response.json
tests/fixtures/league/: player_stats_response.json  team_stats_response.json
tests/fixtures/player/: career_stats_response.json  game_logs_response.json  player_list_response.json
tests/fixtures/team/: game_logs_response.json  roster_response.json
tests/unit/: test_career_stats.py  test_game_logs.py  test_player_list.py
tests/unit/endpoints/game/: __init__.py  test_boxscore_advanced.py  test_boxscore_traditional.py
tests/unit/endpoints/league/: test_player_stats.py  test_team_stats.py
tests/unit/endpoints/team/: __init__.py  test_game_logs.py  test_roster.py  test_season_stats.py
