[tool.poetry]
name = "pygb3"
version = "0.1.0"
description = "An SDK interfact to the NBA Stats API"
authors = ["Bradley Fay <bradley.fay@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.19.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
pytest = "^6.2.4"
mypy = "^0.910"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
